<resources>
    <string name="app_name">VietSkin Doctor</string>
    <string name="facebook_app_id">254486358541613</string>
    <string name="next">Tiếp Tục</string>
    <string name="alert_select_position">Vui lòng chọn vị trí mắc bệnh</string>
    <string name="alert_update_info">Đừng quên cập nhật thông tin cá nhân !</string>
    <string name="alert_update_info2">Mọi thông tin của bạn sẽ hoàn toàn được bảo mật.</string>
    <string name="alert_update_info3">Vui lòng nhập địa chỉ email của bạn trước khi đăng nhập</string>
    <string name="q1_khong_co_trieu_chung">Không có triệu chứng</string>
    <string name="q1_cham_chich">Châm chích</string>
    <string name="q1_rat">Rát</string>
    <string name="q1_dau">Đau</string>
    <string name="q1_ngua">Ngứa</string>
    <string name="q2_vai_nam">Vài năm</string>
    <string name="q2_vai_gio">Vài giờ</string>
    <string name="q2_vai_ngay">Vài ngày</string>
    <string name="q2_vai_thang">Vài tháng</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="bac_si">Bác sĩ</string>
    <string name="phien_tu_van">Phiên tư vấn</string>
    <string name="title_rule">Điều khoản sử dụng</string>
    <string name="title_content_login">Sử dụng tài khoản Facebook hoặc Gmail để đăng nhập tự động vào ứng dụng VietSkin</string>
    <string name="title_cancel">Hủy</string>
    <string name="title_alert_info">Thông báo</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_info_account">Thông tin tài khoản</string>
    <string name="title_change_password">Đổi mật khẩu</string>
    <string name="title_transaction_log">Lịch sử giao dịch</string>
    <string name="title_info_account2">Thông tin tự chẩn đoán</string>
    <string name="title_recharge_money">Ví VietSkin</string>
    <string name="title_recharge_money2">Nạp tiền</string>
    <string name="title_save">Lưu lại</string>
    <string name="title_update_account">Cập nhật thông tin tài khoản</string>
    <string name="title_guide">Hướng dẫn</string>
    <string name="title_table_fee">Bảng giá dịch vụ</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_back">Quay lại phiên tư vấn</string>
    <string name="title_confirm">Xác nhận</string>
    <string name="title_update">Cập nhật</string>
    <string name="title_phone">Số điện thoại</string>
    <string name="title_name">Họ tên</string>
    <string name="title_gender">Giới tính</string>
    <string name="title_gender2">Giới tính:</string>
    <string name="title_address">Địa chỉ</string>
    <string name="title_date">Tuổi</string>
    <string name="title_weight">Cân nặng (Kg)</string>
    <string name="title_money">Số dư (VND)</string>
    <string name="title_not_installed">Chưa cập nhật</string>
    <string name="title_money_default">0 VND</string>
    <string name="title_money_default2">%s VND</string>
    <string name="title_money_default3">Số tiền nạp (VNĐ)</string>
    <string name="title_money_default4">%s VNĐ</string>
    <string name="title_phone_default">Nhập số điện thoại của bạn</string>
    <string name="title_phone_defaul">Nhập số điện thoại của bạn</string>
    <string name="msg_alert_info">Có lỗi xảy ra. Vui lòng thử lại</string>
    <string name="msg_alert_recharge_success">Vui lòng truy cập vào đường link %s để nạp tiền</string>
    <string name="msg_alert_recharge">Có lỗi xảy ra. Vui lòng thử lại</string>
    <string name="msg_withdrawal_processing">Bạn đã yêu cầu </string>
    <string name="msg_recharge"><![CDATA[
        Nhập số tiền cần nạp (Tối thiểu 20.000 VNĐ && Tối đa 20.000.000 VNĐ)
    ]]></string>
    <string name="msg_withdraw_once">Bạn có một yêu cầu rút tiền đang được xử lý nên bạn không được tạo yêu cầu mới.  </string>
    <string name="msg_error_input_recharge">Số tiền nạp tối thiểu 20.000 VNĐ</string>
    <string name="msg_error_input_recharge2">Số tiền nạp tối đa 20.000.000 VNĐ</string>
    <string name="msg_pass_code_required">Nhập PassCode để xác nhận lệnh yêu cầu rút tiền ví VietSkin</string>
    <string name="msg_withdraw_amount">Nhập số tiền yêu cầu rút</string>
    <string name="error_empty_amount">Vui lòng nhập số tiền cần nạp (VNĐ)</string>
    <string name="error_invalid_money">Số tiền nhập không hơp lệ hoặc lớn hơn số tiền trong ví.\n Xin vui lòng kiểm tra lại.</string>
    <string name="error_invaild_passcode">Passcode không hợp lệ</string>
    <string name="error_empty_phone">Vui lòng nhập số điện thoại</string>
    <string name="danh_sach_bs">Danh sách bác sĩ</string>
    <string name="title_result">Kết quả</string>
    <string name="kham_online">Tư vấn Online</string>
    <string name="tu_van_truc_tiep">Tư vấn trực tiếp với bác sĩ</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="bo_loc">Bộ lọc</string>
    <string name="thong_tin_bs">Thông tin bác sĩ</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="luot_danh_gia">Lượt đánh giá :</string>
    <string name="chuyen_gia_tu_van">Chuyên môn chính</string>
    <string name="kinh_nghiem_y_khoa">Kinh nghiệm y khoa</string>
    <string name="bang_cap_chuyen_mon">Bằng cấp chuyên môn</string>
    <string name="noi_lam_viec">Nơi làm việc</string>
    <string name="dang_ky_kham_ngay">Đăng ký tư  ngay</string>
    <string name="register_consultant">Đăng ký tư vấn ngay</string>
    <string name="input_phone_number">Nhập số điện thoại của bạn để đăng nhập</string>
    <string name="error_phone_number">Số điện thoại không chính xác vui lòng nhập lại</string>
    <string name="msg_phone_error1">Số điện thoại này đã được dùng để đăng kí tài khoản bệnh nhân trong hệ thống Vietskin. Vui lòng sử dụng Số điện thoại khác để đăng kí tài khoản bác sĩ</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="so_nam_kinh_nghiem">Số năm kinh nghiệm</string>
    <string name="chuyen_nganh">Chuyên Ngành</string>
    <string name="ngon_ngu">Ngôn ngữ</string>
    <string name="tinh_tp">Tỉnh thành phố</string>
    <string name="truc_tuyen">Trực tuyến</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="tat_ca">Tất cả</string>
    <string name="question_1">Câu hỏi 1</string>
    <string name="question_2">Câu hỏi 2</string>
    <string name="ok_button">OK</string>
    <string name="again_button">Nhắc tôi sau</string>
    <string name="vui_long_chon_1_pa">Vui lòng chọn ít nhất 1 phương án.</string>
    <string name="title_skip">Bỏ qua</string>
    <string name="flash_screen_title_01">Giới thiệu 1</string>
    <string name="flash_screen_title_02">Giới thiệu 2</string>
    <string name="flash_screen_detail_01">VietSkin là 1 phần mềm mobile giúp kết nối bệnh nhân với bác sĩ nhanh chóng.</string>
    <string name="flash_screen_detail_02">VietSkin là 1 phần mềm mobile giúp kết nối bệnh nhân với bác sĩ nhanh chóng.</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="ban_chua_dang_nhap">Bạn chưa đăng nhập. Vui lòng đăng nhập để sử dụng chức năng tư vấn bệnh trực tuyến với bác sĩ.</string>
    <string name="dang_nhap_ngay">Đăng nhập ngay!</string>
    <string name="tao_phien_tu_van">Tạo phiên tư vấn</string>
    <string name="kilogam">Kg</string>
    <string name="nhap_can_nang"><font size="14">Nhập cân nặng của bạn</font></string>
    <string name="can_nang">Cân nặng</string>
    <string name="mo_ta_trieu_chung">Mô tả triệu chứng</string>
    <string name="vui_long_nhap_trieu_chung"><font size="14">Vui lòng nhập một vài triệu chứng của bạn.</font></string>
    <string name="hinh_anh_dinh_kem">Hình ảnh đính kèm</string>
    <string name="title_create">Tạo</string>
    <string name="title_create2">Tạo phiên tư vấn</string>
    <string name="title_select">Chọn</string>
    <string name="permission_request">Ứng dụng cần quyền sử dụng máy ảnh và ghi vào bộ nhớ</string>
    <string name="vui_long_nhap_can_nang">Vui lòng nhập cân nặng của bạn.</string>
    <string name="chua_co_bac_si">Chưa có bác sĩ trong phiên tư vấn!</string>
    <string name="phien_kham_chua_co_bac_si">Phiên tư vấn này hiện chưa được bác sĩ nào đồng ý. Vui lòng chờ phản hồi của bác sĩ hoặc Gửi yêu cầu tới bác sĩ khác</string>
    <string name="chon_bac_si_khac">Chọn bác sĩ mới</string>
    <string name="tiep_tuc_cho_bac_si">Tiếp tục chờ</string>
    <string name="title_disease_occur">Các bệnh có thể mắc</string>
    <string name="title_img">Hình ảnh</string>
    <string name="title_description">Mô tả</string>
    <string name="title_name_ill">Tên bệnh</string>
    <string name="session_timed_out_content">Phiên làm việc của bạn đã kết thúc. Vui lòng đăng nhập lại.</string>
    <string name="close">Đóng</string>
    <string name="send_message">Gửi</string>
    <string name="nhap_tin_nhan">Nhập tin nhắn</string>
    <string name="user_action_typing">đang nhập</string>
    <string name="account_balance">Số dư khả dụng (VNĐ)</string>
    <string name="account_balance2">Số tiền khoanh giữ (VNĐ)</string>
    <string name="account_balance3">Số dư khả dụng (VNĐ):</string>
    <string name="history_transaction">Lịch sử giao dịch</string>
    <string name="title_doctor">Tư vấn trực tiếp với bác sĩ</string>
    <string name="title_more">Xem thêm...</string>
    <string name="mau_xet_nghiem">Xem nhanh phiếu xét nghiệm</string>
    <string name="phieu_xet_nghiem">Phiếu xét nghiệm</string>
    <string name="don_thuoc">Đơn thuốc</string>
    <string name="xem_nhanh_don_thuoc">Xem nhanh đơn thuốc</string>
    <string name="vi_vietskin_cua_ban">Ví VietSkin của bạn:</string>
    <string name="hold_credit">Số tiền khoanh giữ:</string>
    <string name="bang_cap">Bằng cấp:</string>
    <string name="tim_kiem_bac_si">Tìm kiếm bác sĩ</string>
    <string name="nhap_ten_bac_si">Nhập tên bác sĩ...</string>
    <string name="tim_bac_si_phu_hop">Tìm bác sĩ phù hợp theo tiêu chí:</string>
    <string name="msg_update_success">Cập nhật thông tin cá nhân thành công</string>
    <string name="msg_phone_error">Số điện thoại đã được sử dụng</string>
    <string name="not_update">Chưa cập nhật</string>
    <string name="not_update2">Chưa có đánh giá</string>
    <string name="fee">PHÍ TƯ VẤN : %s VND</string>
    <string name="error_no_connection">Không có kết nối mạng khả dụng. Vui lòng bật dữ liệu di động hoặc kết nối tới Wifi và thử lại.</string>
    <string name="phien_dang_cho">Phiên đang chờ</string>
    <string name="phien_dang_tu_van">Phiên đang tư vấn</string>
    <string name="phien_da_hoan_thanh">Phiên đã hoàn thành</string>
    <string name="yeu_cau_thanh_cong">Yêu cầu tư vấn của bạn\nđã được thông báo đến bác sĩ\n\nBác sĩ sẽ liên hệ với bạn trong vòng 3 tiếng.</string>
    <string name="lam_lai">Làm lại</string>
    <string name="not_match">Không tìm thấy bệnh nào phù hợp\n Xin vui lòng thử lại!</string>
    <string name="cancel_ask">Bạn có chắc muốn hủy phiên tư vấn?</string>
    <string name="cancel_title">Các thông tin sẽ bị xóa bỏ và không lưu lại.</string>
    <string name="cancel_success">Bạn đã hủy phiên tư vấn thành công!</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="tu_chan_doan">Tự chẩn đoán</string>
    <string name="title_male">Nam</string>
    <string name="title_female">Nữ</string>
    <string name="error_input_name">Vui lòng nhập họ tên</string>
    <string name="error_input_name2">Vui lòng nhập họ tên giới hạn từ 4 đến 25 ký tự</string>
    <string name="error_input_name3">Vui lòng nhập họ tên chỉ bao gồm chữ cái và dấu cách</string>
    <string name="error_input_birthday">Vui lòng chọn ngày sinh</string>
    <string name="error_input_gender">Vui lòng chọn giới tính</string>
    <string name="error_input_phone">Vui lòng nhập số điện thoại</string>
    <string name="email_hint">Email</string>
    <string name="new_photo">Chụp ảnh mới</string>
    <string name="select_photo">Chọn ảnh từ thư viện</string>
</resources>