<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_dialog_color"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog_update"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp_70"
            android:padding="@dimen/dp_15"
            >
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/alert_update_info3"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/color_gray"
            android:visibility="gone"
            tools:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textSize="16sp"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#1b90d9" />

            <RelativeLayout
                android:id="@+id/delEmail"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_delete_button2" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/alert_update_info2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:background="@drawable/bg_button_again"
                />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/title_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:background="@drawable/bg_button_cont"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>