<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dialog_color"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:overScrollMode="never"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/bo_loc"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gioi_tinh"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spGioiTinh"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/so_nam_kinh_nghiem"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spNamKinhNghiem"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chuyen_nganh"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spChuyenNganh"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ngon_ngu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spNgonNgu"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bang_cap_chuyen_mon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spBangCap"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tinh_tp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spThanhPho"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/truc_tuyen"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    />
                <Spinner
                    android:id="@+id/spTrucTuyen"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:dropDownVerticalOffset="@dimen/dp_0"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/bg_dropdown_spinner"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/dp_20"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tvHuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_cancel"
                    android:textColor="@color/dull_teal"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tvTimKiem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/tim_kiem"
                    android:textColor="@color/dull_teal"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>