<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_recharge"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edt_amount"
                    style="@style/edit_text_amount_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textStyle="italic"
                    android:imeOptions="actionDone"
                    android:hint="@string/title_money_default3"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/vietskin_color"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dull_teal"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone"
                tools:text="Năm trăm tỷ"
                tools:visibility="visible"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/title_confirm"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_confirm"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>