<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dialog_color"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_20"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginTop="@dimen/dp_200"
            android:background="@drawable/bg_dialog_update"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/takePhoto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:gravity="center"

                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.2"
                android:background="@color/white_two" />

            <LinearLayout
                android:id="@+id/selectPhoto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:gravity="center"

                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.2"
                android:background="@color/white_two" />

            <LinearLayout
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>